EEVEE Filter Size setting set to 0.00px no longer results in a pixelated viewport, but still outputs a pixelated render #130669
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#130669
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.26100-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 566.14 Opengl Backend
Blender Version
Broken: version: 4.3.0, branch: blender-v4.3-release, commit date: 2024-11-19 08:52, hash:
2b18cad88b13
Worked: 4.2
Short description of error
Prior to 4.3, in EEVEE setting the filter size under 'Film' in the render tab to 0.00px would result in a pixelated view-port, which was incredibly useful for making low res art such as pixel art. In 4.3 the view-port becomes blurry when setting the filter size to 0.00px, but rendering the image still results in a pixelated image.
Attached is an example of what I see in the view-port vs when I render.
Exact steps for others to reproduce the error
In render tab:
In output tab:
Render image and compare the pixelated render to blurry view-port.
Prior versions of blender did not have a blurry view-port.
I can confirm the change in Blender 4.3
I think I know change caused it. But I will bisect it to find out.
The change came from
c72a1d698e
CC @fclem
Arguably the large blocky pixels in the viewport in 4.2 wasn't correct. So that's been fixed. However I would class the blurry pixels in the viewport as a bug.
I fixed the blurring issue.
Correct, it wasn't correct.
Note that while it might have been useful this is not the goal of this feature as it will try to always resolve to the viewport native size.
A proper way would be to use the realtime compositor to resample the viewport using pixelated UV.