Fix #130669: EEVEE: Filter Size of 0 doesn't result in sharp viewport if using pixel scaling

Clamping the filter size when using scaling factor > 1 fixes
the issue.
Without this, the filter becomes a dirac and samples gets
only the fallback weight. This would results in a box
blur instead of no filtering.